# volt

./: .gitmodules  CITATION.cff  CMakeLists.txt  CONTRIBUTING.org  README.org  SECURITY.md  volt.hh  volt.ini
.github/: FUNDING.yaml  config.yaml
.github/workflows/: ci.yaml  security-analysis.yaml
App/: Entrypoint.hh  IAppBackend.hh
Core/: KeyboardWin32.hh  LogSystem.cc  LogSystem.hh  NewtonMethod.hh  Slotmap.cc  Slotmap.hh  SnowflakeID.cc  SnowflakeID.hh  Sqrt.cc  Timepoint.cc  Timepoint.hh  Vector3.cc  Vector3.hh
Renderer/: PreRenderSystem.cc  PreRenderSystem.hh  RenderSystem.hh  Sprite.cc  Window.cc
Runtime/: BehaviourBounce.hh  BehaviourShootFreq.hh  BehaviourSystem.cc  BehaviourSystem.hh  IBehaviour.hh  IDComponent.hh  InputSystem.hh  Keyboard.cc  Keyboard.hh  PhysicsComponent.hh  PhysicsSystem.hh  Scene.hh  TagComponent.hh
cmake/: build_type.cmake  c_compiler.cmake  c_compiler_options.cmake  cross-mingw.cmake  cxx_compiler.cmake  cxx_compiler_options.cmake  volt_options.cmake
cmake/cross/: cross-mingw-x86_64.cmake
editor/: CMakeLists.txt  Editor.cc  editor.cc
examples/: TurningAround.hxx
src/: CMakeLists.txt
src/App/: AppSpec.hh  Entrypoint.hh  Goodbye.cc  Goodbye.hh  IAppBackend.hh
src/Core/: Abs.cc  Abs.hh  FileDialog.hh  FileDialog_Apple.mm  KeyboardApple.hh  KeyboardX11.hh  LogSystem.cc  LogSystem.hh  NewtonMethod.hh  PNGDecode.cc  PNGDecode.hh  PNGDecode_HuffmanTree.cc  PNGDecode_HuffmanTree.hh  PNGDecode_Inflator.cc  PNGDecode_Inflator.hh  PNGDecode_Zlib.cc  PNGDecode_Zlib.hh  Slotmap.cc  SnowflakeID.cc  SnowflakeID.hh  Sqrt.hh  Timepoint.cc  Timepoint.hh  VFS.cc  VFS.hh  Vector2.cc  Vector2.hh  Vector3.cc  Vector3.hh
src/Renderer/: EditorLayer.cc  EditorLayer.hh  ISprite.hh  IWindow.hh  PreRenderSystem.cc  PreRenderSystem.hh  RenderComponent.hh  RenderSystem.cc  RenderSystem.hh  RenderSystemSpec.hh  Sprite.cc  Sprite.hh  SpritePTC.cc  SpritePTC.hh  SpriteRendererComponent.cc  SpriteRendererComponent.hh  Window.cc  Window.hh  WindowPTC.cc  WindowPTC.hh
src/Runtime/: BehaviourBounce.cc  BehaviourBounce.hh  BehaviourComponent.cc  BehaviourComponent.hh  BehaviourShootFreq.cc  BehaviourShootFreq.hh  BehaviourSystem.cc  BehaviourSystem.hh  IBehaviour.hh  IComponent.hh  IDComponent.cc  IDComponent.hh  InputComponent.hh  InputSystem.cc  InputSystem.hh  PhysicsSystem.cc  PhysicsSystem.hh  Project.cc  Project.hh  ProjectSpec.hh  Rigidbody2DComponent.cc  Rigidbody2DComponent.hh  Scene.cc  Scene.hh  SceneSerializer.cc  SceneSerializer.hh  TagComponent.cc  TagComponent.hh  TransformComponent.cc  TransformComponent.hh
